--- a/resume/style.css
+++ b/resume/style.css
@@ -122,6 +122,18 @@ position:absolute; top:0px; left:0px; z-index:555;
 img.picture{
 position:absolute; top:0px; left:0px; z-index:444;
 }
+.projectTitle{
+    float: left;
+    display: inline-block;
+    width: 70px;
+    height: 45px;
+}
+.projectContent{
+    float: right;
+    display: inline-block;
+    width: 435px;
+    height: 45px;
+}
 .otherDiv{
 	width: 60px;
     height: 60px;
